[package]
name = "tetris"
version = "0.1.0"
authors = ["Yuma Hiramatsu <ayzgnm5k8y@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "*"
time = "*"
wasm-bindgen = "*"

[dependencies.web-sys]
version = "*"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "EventTarget",
  "HtmlCanvasElement",
  "Window",
]
