[package]
name = "domris"
version = "0.1.0"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.33"
rand = { version = "0.6.1", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.29"

[dependencies.web-sys]
version = "0.3.6"
features = [
  "CanvasRenderingContext2d",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "Document",
  "HtmlCanvasElement",
  "HtmlElement",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "NodeList",
  "Window",
]
